# mike-oxlongs-totally-legit-card-checker

./: README.md  package-lock.json  package.json
.github/workflows/: codeql-analysis.yml  ossar-analysis.yml  release.yml
public/: index.html  manifest.json
src/: App.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/assets/: hero-img.jfif
src/components/: LoadingSpinner.js
src/components/Button/: Button.js  Button.module.css
src/components/FormGroup/: FormGroup.js  FormGroup.module.css
src/components/Intro/: Intro.js
src/components/IntroText/: IntroText.js  IntroText.module.css
src/hooks/: useInput.js
src/pages/: IntroPage.js  IntroPage.module.css  ScanPage.js  ScanPage.module.css
src/utils/: luhnCheckHandler.js
