[package]
name = "app"
version = "0.1.0"
description = "A totally legit credit card vulnerability checker. This is meant as a joke and is not to be used commercially."
authors = ["Aditya Bhattacharya"]
license = "MIT"
repository = "https://github.com/AdityaBhattacharya1/totally-legit-card-checker"
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
